# hughes2d

./: .coverage  README.md  TestDXFImport.py  TestMeshing.py  TestNumpyTyping.py  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: python-package.yml
boum/: CompareMass.py  TestFISconfig_1.py
boum/MauroRinaldo/: ConvolutionTest.py  Solver.py  TestLWR.py
boum/Regularity/: TimeSlices.py  testCouloir.py  testCouloirDistance.py
boum/Test5/: ComparePlots.py  Test3LWRmodels.py  generateMesh.py
boum/TestBraess/: ComparePlots.py  TimeSlices.py  testEvac.py
boum/TurnPike/: CompareTurnPike.py  CompareTurnPikeDistance.py  CompareTurnPikeRandom.py  GenerateMesh.py  TestTurnPike.py
boum/calibrage/: DensityTest.py  Solve.py
boum/config1/: GenConfig1_1mesh.py  TestConfig1MeshFF.py  TestFISconfig_1.py
examples/: getting_started.py
examples/File handling/FreeFem/: TestExportMSH.py  (+4 more)
examples/Plotter/: TestMatPlotCollec.py  TimeSlices.py
examples/Solving Eikonal/: EikoBounds.py  ExperimentalCV1.py  ExperimentalCV2.py  Mesh_sensitivity.py  TestEiko.py  TestEikoLSC.py  VectorsBounds.py
examples/Solving Hughes/: CompareExplicit.py  Exemple1.py  PlottingAdditionnals.py  TestAdditionnalComputations.py  TestConfig1MeshFF.py  TestRuGrandmont.py  TimeSlices.py  generateMesh.py
examples/Solving LWR/: TestLWR.py
src/hughes2d/: EikonalSolver.py  LWR2D.py  MeasureUtils.py  Mesh2D.py  Plotter.py  Splitting.py  __init__.py  plotMesh_plotly.py
test/: testMesh1_mesh.json  test_Mesh2D.py  test_Mesh2D_squareDomain.py  test_Mesh2D_squareDomain_plots.py
(+14 files in other folders)
